# wix-oss-infra

./: .travis.yml  BUILD.bazel  README.md  WORKSPACE  import_external.bzl  macros.bzl  tests.bzl  third_party.bzl
dependencies/google_protobuf/: google_protobuf.bzl
dependencies/rules_scala/: rules_scala.bzl
dependencies/test_network_sandboxing/: download_network_sandboxing.bzl  test_network_sandboxing.bzl
scripts/post-migration-commons/: BUILD.bazel
test-agent/src/main/java/com/wixpress/agent/: TestsJavaAgent.java
test-agent/src/shared/: jdk11_agent_setup.bzl  jdk8_agent_setup.bzl  tests.bzl  tests_external_repository.bzl
test-agent/src/test/resources/: BUILD.bazel  test-file-1.txt
test-agent/src/test/scala/com/wixpress/agent/: AbstractTestAgentTest.scala  BUILD.bazel  TestAgentMatchers.scala  TestAgentOverrideTest.scala  TestAgentTest.scala
toolchains/: BUILD.bazel
toolchains/jdk/: BUILD.bazel
