load("@io_bazel_rules_scala//scala:scala_toolchain.bzl", "scala_toolchain")
load("@bazel_tools//tools/jdk:default_java_toolchain.bzl", "default_java_toolchain", "JDK8_JVM_OPTS", "JDK9_JVM_OPTS", "DEFAULT_JAVACOPTS")
load(
    "@io_bazel_rules_scala//scala:providers.bzl",
    _declare_scalac_provider = "declare_scalac_provider",
)

scala_toolchain(
    name = "wix_defaults_global_toolchain_impl",
    scalacopts = [
        "-unchecked",
        "-deprecation",
        "-feature",
        "-Xmax-classfile-name",
        "240",
        "-Ywarn-unused-import",
        "-Ywarn-unused",
        "-Ywarn-macros:after",
    ],
    dependency_mode = "plus-one",
    scalac_provider_attr = "@wix_oss_infra//toolchains:scalac_default",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "wix_defaults_global_toolchain",
    toolchain = "wix_defaults_global_toolchain_impl",
    toolchain_type = "@io_bazel_rules_scala//scala:toolchain_type",
    visibility = ["//visibility:public"],
)

default_java_toolchain(
    name = "wix_default_java_toolchain",
    bootclasspath = ["@bazel_tools//tools/jdk:platformclasspath"],
    jvm_opts = JDK8_JVM_OPTS,
    misc = DEFAULT_JAVACOPTS + [
        "-g",
        "-deprecation",
        "-XepDisableAllChecks",
    ],
    source_version = "8",
    target_version = "8",
    visibility = ["//visibility:public"],
)

default_java_toolchain(
    name = "wix_default_java11_toolchain",
    bootclasspath = ["@bazel_tools//tools/jdk:platformclasspath"],
    jvm_opts = JDK9_JVM_OPTS,
    misc = DEFAULT_JAVACOPTS + [
        "-g",
        "-deprecation",
        "-XepDisableAllChecks",
    ],
    source_version = "11",
    target_version = "11",
    visibility = ["//visibility:public"],
)

_declare_scalac_provider(
    name = "scalac_default",
    default_classpath = [
        "@org_scala_lang_scala_library",
        "@org_scala_lang_scala_reflect",
    ],
    default_macro_classpath = [
        "@org_scala_lang_scala_library",
        "@org_scala_lang_scala_reflect",
    ],
    default_repl_classpath = [
        "@org_scala_lang_scala_library",
        "@org_scala_lang_scala_reflect",
        "@org_scala_lang_scala_compiler",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "jdk8",
    actual = "//toolchains/jdk:wix_remote_jdk",
    visibility = ["//visibility:public"],
)

alias(
    name = "crosstool_top",
    actual = "@rbe_default//cc:toolchain",
    visibility = ["//visibility:public"],
    tags = ["manual"],
    )

alias(
    name = "extra_toolchains",
    actual = "@rbe_default//config:cc-toolchain",
    visibility = ["//visibility:public"],
    tags = ["manual"],
    )
